Use web-based hit testing for focus recovery

Bug: 800171

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: If93297dcb2051d43e29982abd23a5dfbe2d5bd6e